[metadata]
name = mcafee-epo
version = 1.0.4.dev0
url = https://github.com/davidism/mcafee-epo
author = David Lord
author_email = davidism@gmail.com
license = BSD-3-Clause
license_file = LICENSE.rst
description = McAfee ePolicy Orchestrator API client
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: System :: Systems Administration

[options]
py_modules =
    mcafee_epo
include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    requests

[bdist_wheel]
universal = true
